--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Graph Visualization with Vis.js</title>
+  <title>Cut Vertices Detection</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -45,7 +45,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css">
 </head>
 <body>
-
+<h1>Vertex Cut Detector</h1>
 <!-- Graph Container -->
 <div id="graph-container"></div>
 
